--- a/src/View/Components/monthGrid.css
+++ b/src/View/Components/monthGrid.css
@@ -86,7 +86,7 @@
     animation: slide-up var(--animation-duration);
 }
 
-@media (max-width: 640px) and (max-height: 900px) {
+@media (max-width: 640px) and (max-height: 1200px) {
     .month-grid .tile {
         padding: 0px;
     }
